Troubleshooting Layout Issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-transform: uppercase;
   text-align: center;
   white-space: nowrap;
@@ -315,6 +315,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -549,14 +550,21 @@ a {
     }
 
     .testimonial .quote{
-        margin-left: 6rem;
+        margin: 5rem 0 0 6rem;
+        line-height: 1.5;
     }
+
 }
 
 /* Callouts */
 .callout{
   padding: 4rem;
   border-radius: 5px;
+}
+
+
+.callout-signup {
+  transform: translateY(5rem);
 }
 
 .callout--primary{
@@ -577,10 +585,13 @@ a {
 
 .callout__content{
   text-align: center;
+  font-size: 2rem;
 }
+
 
 /* Callout layout for tablets and wider screens */
 @media screen and (min-width: 768px){
+ 
   .callout .grid--1x2{
     grid-template-columns: 1fr auto;
   }
@@ -629,7 +640,7 @@ a {
 
 /* Blocks */
 .block{
-  --padding-vertical: 6rem;
+  --padding-vertical: 3rem;
   padding: var(--padding-vertical) 2rem;
 }
 
@@ -759,6 +770,7 @@ a {
 }
 
 /* Domain Block */
+
 .block-domain .input-group{
   box-shadow: 0 0 30px 20px #e6ebee;
   border: 0;
@@ -767,8 +779,9 @@ a {
 }
 
 .block-domain__prices{
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
@@ -784,6 +797,10 @@ a {
 }
 
 /* Plan blocks */
+.block-plans{
+  padding-bottom: 10rem;
+}
+
 .block-plans .grid{
  gap: 8rem 5rem;
 }
@@ -842,6 +859,7 @@ a {
 /* footer */
 .footer{
   background: #232323;
+  padding-top: 10rem;
 }
 
 .footer__section{
@@ -886,6 +904,10 @@ a {
 
 /* footer layout for wider screens */
 @media screen and (min-width: 768px) {
+  .footer {
+    font-size: 1.5rem;
+  }
+
   .footer__sections{
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
